fix style on mobile

--- a/src/Components/WeeklyForecast/style.css
+++ b/src/Components/WeeklyForecast/style.css
@@ -2,19 +2,20 @@
   margin-top: 3rem;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 0.5rem;
 }
 
 .weekday-weather {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   font-family: "Inter";
   font-size: 1rem;
   letter-spacing: 2px;
   font-weight: 600;
   color: white;
-  padding-top: 1rem;
+  margin-top: 1rem;
 }
 
 .weekly-icon {
